==> ChibiOS/ChibiOS/os/hal/platforms/LPC17xx/mac_lld.c <==
#include <string.h>
#include "ch.h"
#include "hal.h"
#include "mii.h"
#define BUFFER_SIZE ((((LPC17xx_MAC_BUFFERS_SIZE - 1) | 3) + 1) / 4)
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_20
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_28
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_36
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_40
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_44
#define MAC_MII_MCFG_CLK_SEL      EMAC_MCFG_CLK_DIV_48

void mii_write(MACDriver *macp, uint32_t reg, uint32_t value) {

  LPC_EMAC->MCMD = 0;
  LPC_EMAC->MADR = macp->phyaddr | reg; /* Write PHY address and register address */
  LPC_EMAC->MWTD = value;               /* Write data */
  while((LPC_EMAC->MIND & EMAC_MIND_BUSY) != 0)
    ;                                   /* Wait for busy bit to be cleared in MIND */

}

uint32_t mii_read(MACDriver *macp, uint32_t reg) {

  LPC_EMAC->MCMD = 1;
  LPC_EMAC->MADR = macp->phyaddr | reg; /* Write PHY address and register address */
  while((LPC_EMAC->MIND & EMAC_MIND_BUSY) != 0)
    ;                                   /* Wait for busy bit to be cleared in MIND */
  LPC_EMAC->MCMD = 0;
  return LPC_EMAC->MRDD;
}

void mii_find_phy(MACDriver *macp) {
  uint32_t i;

#if LPC17xx_MAC_PHY_TIMEOUT > 0
  halrtcnt_t start = halGetCounterValue();
  halrtcnt_t timeout  = start + MS2RTT(LPC17xx_MAC_PHY_TIMEOUT);
  while (halIsCounterWithin(start, timeout)) {
#endif
    for (i = 0; i < 31; i++) {
      macp->phyaddr = i << 8;
      if ((mii_read(macp, MII_PHYSID1) == (BOARD_PHY_ID >> 16)) &&
          ((mii_read(macp, MII_PHYSID2) & 0xFFF0) == (BOARD_PHY_ID & 0xFFF0))) {
        return;
      }
    }
#if LPC17xx_MAC_PHY_TIMEOUT > 0
  }
#endif
  /* Wrong or defective board.*/
  chSysHalt();
}

static void mac_lld_set_address(const uint8_t *p) {

  /* MAC address configuration, only a single address comparator is used,
     hash table not used.*/

  LPC_EMAC->SA0 = ((uint32_t)p[5] << 8) |
                  ((uint32_t)p[4] << 0);
  LPC_EMAC->SA1 = ((uint32_t)p[3] << 8) |
                  ((uint32_t)p[2] << 0);
  LPC_EMAC->SA2 = ((uint32_t)p[1] << 8) |
                  ((uint32_t)p[0] << 0);

  LPC_EMAC->HashFilterL = 0;
  LPC_EMAC->HashFilterH = 0;

  LPC_EMAC->RxFilterCtrl = EMAC_RXFILCTRL_PERFECT_EN | EMAC_RXFILCTRL_BROADCAST_EN;

}

void mac_lld_init(void) {
  unsigned i;

  macObjectInit(&ETHD1);
  ETHD1.link_up = FALSE;

  LPC_SC->PCONP |= (1 << 30);  /* Power up MAC */

  /* Rx desciptor and Rx status tables are initialized. */
  for (i = 0; i < LPC17xx_MAC_RECEIVE_BUFFERS; i++) {
    rd[i].packet = (uint32_t) &rb[i];
    rd[i].control = EMAC_RXSTATUS_CTRL_INT | (LPC17xx_MAC_BUFFERS_SIZE - 1);

    rd_stat[i].info = 0;
    rd_stat[i].hashcrc = 0;
  }

  /* Tx desciptor and Tx status tables are cleared. They are set up every time
  when transmission starts. */
  for (i = 0; i < LPC17xx_MAC_TRANSMIT_BUFFERS; i++) {
    td[i].packet = 0;
    td[i].control = 0;
    td_stat[i] = 0;

    td_tmp[i].packet = (uint32_t) &tb[i];
    td_tmp[i].control = 0;
  }

  /* Reset all EMAC internal modules. */
  LPC_EMAC->MAC1 = EMAC_MAC1_RESET_TX | EMAC_MAC1_RESET_MCS_TX | EMAC_MAC1_RESET_RX |
      EMAC_MAC1_RESET_MCS_RX  | EMAC_MAC1_SIM_RESET | EMAC_MAC1_SOFT_RESET;
  LPC_EMAC->Command = EMAC_COMMAND_REG_RESET | EMAC_COMMAND_TX_RESET | EMAC_COMMAND_RX_RESET;
  LPC_EMAC->MCFG = EMAC_MCFG_RESET_MII_MGMT;        /* Reset MII Managment hardware. */

  halPolledDelay(LPC17XX_MAC_RESET_DELAY);

  LPC_EMAC->MAC1 = 0;                           /* MAC reset de-asserted. */

  /* Selection of the RMII or MII mode based on info exported by board.h.*/
#if defined(BOARD_PHY_RMII)
  LPC_EMAC->Command = EMAC_COMMAND_RMII | EMAC_COMMAND_PASS_RUN_FRAME;
#else
  LPC_EMAC->Command = EMAC_COMMAND_PASS_RUN_FRAME;
#endif

  LPC_EMAC->MCFG = MAC_MII_MCFG_CLK_SEL;        /* Set MII clock divider. */

  /* PHY address setup.*/
#if defined(BOARD_PHY_ADDRESS)
  ETHD1.phyaddr = BOARD_PHY_ADDRESS << 11;
#else
  mii_find_phy(&ETHD1);
#endif

#if defined(BOARD_PHY_RESET)
  /* PHY board-specific reset procedure.*/
  BOARD_PHY_RESET();
#else
  /* PHY soft reset procedure.*/
  mii_write(&ETHD1, MII_BMCR, BMCR_RESET);
#if defined(BOARD_PHY_RESET_DELAY)
  halPolledDelay(BOARD_PHY_RESET_DELAY);
#endif
  while (mii_read(&ETHD1, MII_BMCR) & BMCR_RESET)
    ;
#endif

}

void mac_lld_start(MACDriver *macp) {

  /* PHY in power up mode.*/
  mii_write(macp, MII_BMCR, mii_read(macp, MII_BMCR) & ~BMCR_PDOWN);

  /* MAC registers configuration.*/
  LPC_EMAC->MAC1 = EMAC_MAC1_PASS_ALL_REC;
  LPC_EMAC->MAC2 = EMAC_MAC2_CRC_EN | EMAC_MAC2_PAD_CRC_EN;
  LPC_EMAC->MAXF = LPC17XX_MAC_MAX_FLEN;
  LPC_EMAC->CLRT = LPC17XX_MAC_CLRT_DEF;
  LPC_EMAC->IPGR = LPC17XX_MAC_IPGR_DEF;

  /* MAC descriptor registers configuration. */
  macp->rxsoftindex = 0;
  LPC_EMAC->RxDescriptor = (uint32_t) &rd[0];
  LPC_EMAC->RxDescriptorNumber = LPC17xx_MAC_RECEIVE_BUFFERS - 1;
  LPC_EMAC->RxConsumeIndex = 0;
  LPC_EMAC->RxStatus = (uint32_t) &rd_stat[0];

  macp->txsoftindex = 0;
  LPC_EMAC->TxDescriptor = (uint32_t) &td[0];
  LPC_EMAC->TxDescriptorNumber = LPC17xx_MAC_TRANSMIT_BUFFERS - 1;
  LPC_EMAC->TxProduceIndex = 0;
  LPC_EMAC->TxStatus = (uint32_t) &td_stat[0];

  /* MAC address setup.*/
  if (macp->config->mac_address == NULL)
    mac_lld_set_address(default_mac_address);
  else
    mac_lld_set_address(macp->config->mac_address);

  /* Enable EMAC interrupts. */
  LPC_EMAC->IntEnable = EMAC_INTEN_TX_DONE | EMAC_INTEN_RX_DONE |
      EMAC_INTEN_RX_OVERRUN | EMAC_INTEN_TX_UNDERRUN;

  /* Reset all interrupts. */
  LPC_EMAC->IntClear  = 0xFFFF;

  /* ISR vector enabled.*/
  nvicEnableVector(ENET_IRQn, CORTEX_PRIORITY_MASK(LPC17xx_MAC_ETH_IRQ_PRIORITY));

  /* Enable receive and transmit mode. */
  LPC_EMAC->Command  |= EMAC_COMMAND_TX_ENABLE | EMAC_COMMAND_RX_ENABLE;
  LPC_EMAC->MAC1     |= EMAC_MAC1_RECEIVE_EN;

}

void mac_lld_stop(MACDriver *macp) {

  if (macp->state != MAC_STOP) {

    /* MAC and DMA stopped.*/
    LPC_EMAC->MAC1 = 0;
    LPC_EMAC->Command = 0;
    LPC_EMAC->IntEnable = 0;

    /* PHY in power down mode until the driver will be restarted.*/
    mii_write(macp, MII_BMCR, mii_read(macp, MII_BMCR) | BMCR_PDOWN);

    /* ISR vector disabled.*/
    nvicDisableVector(ENET_IRQn);
  }

}

msg_t mac_lld_get_transmit_descriptor(MACDriver *macp,
                                      MACTransmitDescriptor *tdp) {
  uint32_t produce_index;
  uint32_t produce_index_next;

  if (!macp->link_up)
    return RDY_TIMEOUT;

  chSysLock();

  /* Get Current TX descriptor.*/
  produce_index = macp->txsoftindex;

  produce_index_next = (produce_index + 1) % LPC17xx_MAC_TRANSMIT_BUFFERS;
  if (produce_index_next == LPC_EMAC->TxConsumeIndex) {
    /* Full */
    chSysUnlock();
    return RDY_TIMEOUT;
  }

  /* Ensure that descriptor isn't locked by the Ethernet DMA or
     another thread.*/
  if (td_tmp[produce_index].control == EMAC_TXSTATUS_CTRL_LOCK) {
    chSysUnlock();
    return RDY_TIMEOUT;
  }

  /* Marks the current descriptor as locked using a reserved bit.*/
  td_tmp[produce_index].control = EMAC_TXSTATUS_CTRL_LOCK;

  /* Next TX descriptor to use.*/
  macp->txsoftindex = produce_index_next;

  chSysUnlock();

  /* Set the buffer size and configuration.*/
  tdp->offset = 0;
  tdp->size = LPC17xx_MAC_BUFFERS_SIZE;
  tdp->txdescn = produce_index;

  return RDY_OK;
}

void mac_lld_release_transmit_descriptor(MACTransmitDescriptor *tdp) {

  uint32_t produce_index;
  uint32_t descn;

  chSysLock();

  produce_index = LPC_EMAC->TxProduceIndex;
  descn = tdp->txdescn;

  /* Set control bits and save temporary descriptor number. */
  td[produce_index].control = EMAC_TXSTATUS_CTRL_INT | EMAC_TXSTATUS_CTRL_LAST | (descn << 12) |
     (tdp->offset - 1);

  td[produce_index].packet = td_tmp[descn].packet;
  LPC_EMAC->TxProduceIndex = (LPC_EMAC->TxProduceIndex + 1) % LPC17xx_MAC_TRANSMIT_BUFFERS;
  chSysUnlock();
}

msg_t mac_lld_get_receive_descriptor(MACDriver *macp,
                                     MACReceiveDescriptor *rdp) {
  uint32_t consume_index;
  uint32_t status;

  chSysLock();

  /* Get current rx descriptor number.*/
  consume_index = macp->rxsoftindex;

  if (LPC_EMAC->RxProduceIndex != consume_index) {
    status = rd_stat[consume_index].info;
    if (status != EMAC_RXSTATUS_INFO_ERROR) {
      /* Found a valid one.*/
      rdp->offset   = 0;
      rdp->size     = (status & EMAC_RXSTATUS_INFO_SIZE_MASK) + 1;
      rdp->rxdescn = consume_index;

      macp->rxsoftindex = (consume_index + 1) % LPC17xx_MAC_RECEIVE_BUFFERS;

      chSysUnlock();
      return RDY_OK;
    }
    else {
      /* Invalid frame found. */
      if (LPC_EMAC->RxConsumeIndex == consume_index) {
        consume_index = (consume_index + 1) % LPC17xx_MAC_RECEIVE_BUFFERS;
        LPC_EMAC->RxConsumeIndex = consume_index;
      }
      else {
        rd[consume_index].control |= EMAC_RXSTATUS_CTRL_READY;
        consume_index = (consume_index + 1) % LPC17xx_MAC_RECEIVE_BUFFERS;
      }
      macp->rxsoftindex = consume_index;
    }
  }

  chSysUnlock();

  return RDY_TIMEOUT;
}

void mac_lld_release_receive_descriptor(MACReceiveDescriptor *rdp) {

  uint32_t consume_index;

  chSysLock();

  /* Only descriptor with number match RxConsumeIndex can release receive descriptors. */
  consume_index = LPC_EMAC->RxConsumeIndex;

  if (rdp->rxdescn == consume_index) {
    consume_index = (consume_index + 1) % LPC17xx_MAC_RECEIVE_BUFFERS;

    while (LPC_EMAC->RxProduceIndex != consume_index) {
      if (rd[consume_index].control & EMAC_RXSTATUS_CTRL_READY) {
        rd[consume_index].control &= ~EMAC_RXSTATUS_CTRL_READY;
        consume_index = (consume_index + 1) % LPC17xx_MAC_RECEIVE_BUFFERS;
      }
      else {
        break;
      }
    }

  LPC_EMAC->RxConsumeIndex = consume_index;
  }
  else {
    rd[rdp->rxdescn].control |= EMAC_RXSTATUS_CTRL_READY;
  }

  chSysUnlock();
}

bool_t mac_lld_poll_link_status(MACDriver *macp) {
  uint32_t mac2, cmd, ipgt, supp, bmsr, bmcr;

  mac2 = LPC_EMAC->MAC2;
  cmd = LPC_EMAC->Command;

  /* PHY CR and SR registers read.*/
  (void)mii_read(macp, MII_BMSR);
  bmsr = mii_read(macp, MII_BMSR);
  bmcr = mii_read(macp, MII_BMCR);

  /* Check on auto-negotiation mode.*/
  if (bmcr & BMCR_ANENABLE) {
    uint32_t lpa;

    /* Auto-negotiation must be finished without faults and link established.*/
    if ((bmsr & (BMSR_LSTATUS | BMSR_RFAULT | BMSR_ANEGCOMPLETE)) !=
        (BMSR_LSTATUS | BMSR_ANEGCOMPLETE))
      return macp->link_up = FALSE;

    /* Auto-negotiation enabled, checks the LPA register.*/
    lpa = mii_read(macp, MII_LPA);

    /* Check on link speed.*/
    if (lpa & (LPA_100HALF | LPA_100FULL | LPA_100BASE4))
      supp = EMAC_SUPP_SPEED;
    else
      supp = 0;

    /* Check on link mode.*/
    if (lpa & (LPA_10FULL | LPA_100FULL)) {
      mac2 |= EMAC_MAC2_FULL_DUPLEX;
      cmd  |= EMAC_COMMAND_FULL_DUPLEX;
      ipgt = LPC17XX_MAC_IPGT_FULL_DUPLEX_DEF;
    }
    else {
      mac2 &= ~EMAC_MAC2_FULL_DUPLEX;
      cmd  &= ~EMAC_COMMAND_FULL_DUPLEX;
      ipgt = LPC17XX_MAC_IPGT_HALF_DUPLEX_DEF;
    }
  }
  else {
    /* Link must be established.*/
    if (!(bmsr & BMSR_LSTATUS))
      return macp->link_up = FALSE;

    /* Check on link speed.*/
    if (bmcr & BMCR_SPEED100)
      supp = EMAC_SUPP_SPEED;
    else
      supp = 0;

    /* Check on link mode.*/
    if (bmcr & BMCR_FULLDPLX) {
      mac2 |= EMAC_MAC2_FULL_DUPLEX;
      cmd  |= EMAC_COMMAND_FULL_DUPLEX;
      ipgt = LPC17XX_MAC_IPGT_FULL_DUPLEX_DEF;
    }
    else {
      mac2 &= ~EMAC_MAC2_FULL_DUPLEX;
      cmd  &= ~EMAC_COMMAND_FULL_DUPLEX;
      ipgt = LPC17XX_MAC_IPGT_HALF_DUPLEX_DEF;
    }
  }

  LPC_EMAC->MAC2 = mac2;
  LPC_EMAC->SUPP = supp;
  LPC_EMAC->Command = cmd;
  LPC_EMAC->IPGT = ipgt;

  /* Returns the link status.*/
  return macp->link_up = TRUE;
}
